# Claude-Context-Engine

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  release.yml  wiki.yml
.superpowers/brainstorm/50384-1776478067/content/: dashboard-mockup.html  layout.html
.superpowers/brainstorm/50384-1776478067/state/: server-stopped
.superpowers/brainstorm/56840-1776505948/content/: chart-options.html
.superpowers/brainstorm/56840-1776505948/state/: server-info
benchmarks/: run_benchmark.py  sample_queries.json
docs/: benchmarks.md  code-review-and-roadmap.md  index.html  review-2026-04-17.md
docs/plans/: 2026-04-18-web-dashboard.md
docs/specs/: 2026-04-18-web-dashboard-design.md
docs/superpowers/plans/: 2026-04-17-claude-context-engine.md  2026-04-18-cce-v02-improvements.md
docs/superpowers/specs/: 2026-04-18-cce-v02-improvements-design.md
docs/wiki/: CLI-Reference.md  Configuration.md  Examples.md  Home.md  How-It-Works.md  Project-Commands.md  Tech-Stack.md
scripts/: install_hooks.sh
src/context_engine/: __init__.py  cli.py  cli_style.py  config.py  daemon.py  models.py  project_commands.py  serve_http.py  services.py  utils.py
src/context_engine/compression/: compressor.py  ollama_client.py  prompts.py
src/context_engine/dashboard/: _page.py  server.py
src/context_engine/indexer/: chunker.py  embedder.py  embedding_cache.py  git_hooks.py  git_indexer.py  manifest.py  pipeline.py  watcher.py
src/context_engine/integration/: bootstrap.py  git_context.py  mcp_server.py  session_capture.py
src/context_engine/retrieval/: confidence.py  query_parser.py  retriever.py
src/context_engine/storage/: backend.py  fts_store.py  graph_store.py  local_backend.py  remote_backend.py  vector_store.py
tests/: conftest.py  test_cli_savings.py  test_cli_serve.py  test_cli_uninstall.py  test_config.py  test_e2e.py  test_project_commands.py  test_real_life.py  test_services.py  test_token_packing.py
tests/compression/: test_ollama_client.py  test_quality.py
tests/dashboard/: test_server.py
tests/indexer/: test_chunker.py  test_embedding_cache.py  test_git_hooks.py  test_git_indexer.py  test_manifest.py  test_pipeline_durability.py  test_pipeline_graph_types.py  test_watcher.py
tests/integration/: test_bootstrap.py  test_git_context.py  test_mcp_server.py  test_memory_loop.py  test_session_capture.py
tests/retrieval/: test_confidence.py  test_query_parser.py  test_retriever.py
tests/storage/: test_delete_batching.py  test_fts_store.py  test_graph_store.py  test_local_backend.py  test_remote_backend.py  test_vector_store.py
