[project]
name = "claude-context-engine"
version = "0.1.0"
description = "Local context engine for Claude Code — indexes projects, compresses context, reduces token cost"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Fazle Elahee"}]
keywords = ["claude", "context", "mcp", "llm", "code-indexing", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "lancedb>=0.6",
    "optimum[onnxruntime]>=1.19",
    "numpy>=1.24",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "watchdog>=4.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.urls]
Homepage = "https://github.com/fazleelahhee/Claude-Context-Engine"
Repository = "https://github.com/fazleelahhee/Claude-Context-Engine"
Issues = "https://github.com/fazleelahhee/Claude-Context-Engine/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
torch = ["sentence-transformers>=3.0"]

[project.scripts]
claude-context-engine = "context_engine.cli:main"
cce = "context_engine.cli:main"
cce-savings = "context_engine.cli:savings_shortcut"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
