[project]
name = "claude-context-engine"
version = "0.2.7"
description = "Local context engine for Claude Code — indexes projects, compresses context, reduces token cost"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [
    {name = "Fazle Elahee", email = "felahee@gmail.com"},
    {name = "Raj", email = "rajkumar.sakti@gmail.com"},
]
keywords = ["claude", "context", "mcp", "llm", "code-indexing", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4",
    "numpy>=1.24",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "watchdog>=4.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.urls]
Homepage = "https://github.com/fazleelahhee/Claude-Context-Engine"
Repository = "https://github.com/fazleelahhee/Claude-Context-Engine"
Issues = "https://github.com/fazleelahhee/Claude-Context-Engine/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
http = ["aiohttp>=3.9"]

[project.scripts]
claude-context-engine = "context_engine.cli:main"
cce = "context_engine.cli:main"
cce-savings = "context_engine.cli:savings_shortcut"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
