[project]
name = "code-context-engine"
version = "0.3.0"
description = "Local context engine for AI coding assistants — indexes projects, compresses context, reduces token cost"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [
    {name = "Fazle Elahee", email = "felahee@gmail.com"},
    {name = "Raj", email = "rajkumar.sakti@gmail.com"},
]
keywords = ["claude", "context", "mcp", "llm", "code-indexing", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4",
    "numpy>=1.24",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "watchdog>=4.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.urls]
Homepage = "https://github.com/fazleelahhee/Claude-Context-Engine"
Repository = "https://github.com/fazleelahhee/Claude-Context-Engine"
Issues = "https://github.com/fazleelahhee/Claude-Context-Engine/issues"

[project.optional-dependencies]
# Versions kept in sync with [dependency-groups].dev below — both groups
# install the same dev tools, just via different mechanisms (PEP 621 vs
# PEP 735), so divergent floors here would yield different environments
# depending on whether you ran `pip install -e .[dev]` or `uv sync --group
# dev`. Suite assumes pytest 9 / pytest-asyncio 1.3 features.
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
]
http = ["aiohttp>=3.9"]

[project.scripts]
# `cce` is the canonical short name. `code-context-engine` is the new long
# alias; `claude-context-engine` is preserved for back-compat with the
# pre-0.3.0 install path so existing scripts and docs keep working after
# upgrading from the previous package name.
cce = "context_engine.cli:main"
code-context-engine = "context_engine.cli:main"
claude-context-engine = "context_engine.cli:main"
cce-savings = "context_engine.cli:savings_shortcut"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
# Run tests in parallel via pytest-xdist. Capped at 4 workers to match
# Embedder._PARALLEL and keep peak memory under ~1.5 GB (each worker
# process loads its own ~60 MB ONNX model). Override with `-n auto` (use
# all logical cores) or `-n 1` (serial) on the command line.
#
# `--dist=loadgroup` keeps tests marked `@pytest.mark.xdist_group(name=…)`
# inside the same worker. We use this to pin all Ollama-hitting tests to
# one worker — phi3:mini serves requests serially under load and the 30s
# per-call timeout would otherwise race when 4 workers fire summarize()
# at once.
addopts = "-n 4 --dist=loadgroup"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.5",
]
